CacheStorage: Don't write index to disk when size is updated to same value.

Bug: 912215

Change-Id: I1f966dbe6db5c1697cb38d48eabe2f39e0fbf5fe
Reviewed-on: https://chromium-review.googlesource.com/c/1363791
Commit-Queue: Ben Kelly <wanderview@chromium.org>
Reviewed-by: Victor Costan <pwnall@chromium.org>
Reviewed-by: Joshua Bell <jsbell@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614078}
Former-commit-id: f5f1180225035d5be67d94b6d837ad8c593b5901